--- a/AdvancedCSharpNET/AdvancedCSharpNET.csproj
+++ b/AdvancedCSharpNET/AdvancedCSharpNET.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>AdvancedCSharpNET</RootNamespace>
-    <StartupObject>AdvancedCSharpNET.Program</StartupObject>
+    <StartupObject>AdvancedCSharpNET.Samples.Dynamic.DynamicPresentation</StartupObject>
   </PropertyGroup>
 
 </Project>
