--- a/AdvancedCSharpNET/AdvancedCSharpNET.csproj
+++ b/AdvancedCSharpNET/AdvancedCSharpNET.csproj
@@ -4,7 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>AdvancedCSharpNET</RootNamespace>
-    <StartupObject>AdvancedCSharpNET.Samples.Dynamic.DynamicPresentation</StartupObject>
+    <StartupObject>AdvancedCSharpNET.Samples.Parallels.PlinqPresentation</StartupObject>
+    <SignAssembly>True</SignAssembly>
   </PropertyGroup>
 
 </Project>
